@@ -8,4 +8,6 @@ EXPOSE 8080
 COPY --from=BUILD /usr/src/app/target/*.jar /opt/target/gaia.jar
 WORKDIR /opt/target
 
+ENV JDK_JAVA_OPTIONS "--add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED"
+
 CMD ["java", "-jar", "gaia.jar"]
